<resources>
    <string name="app_name">Spicy Food</string>
    <string name="txt_login">LOG IN!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign up</string>
    <string name="txt_signup">SIGN UP</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>


</resources>