<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_signup"
        android:textColor="@color/white"
        android:textSize="32sp"

        android:textStyle="bold
" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/txtSignup"
        android:layout_marginBottom="10dp"
        android:background="@color/background_light"
        android:hint="@string/hint_first_name"
        android:padding="10dp"
        android:textColorHint="@color/hint_text"
        android:textSize="18sp"

        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/etFirstName"
        android:layout_marginBottom="10dp"
        android:background="@color/background_light"
        android:hint="@string/hint_last_name"
        android:padding="10dp"
        android:textColorHint="@color/hint_text"
        android:textSize="18sp"

        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLastName"
        android:layout_marginBottom="10dp"
        android:background="@color/background_light"
        android:hint="@string/hint_password"
        android:padding="10dp"
        android:textColorHint="@color/hint_text"
        android:textSize="18sp"

        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:layout_below="@+id/etEmail"
        android:layout_marginBottom="10dp"
        android:background="@color/background_light"
        android:hint="@string/hint_password"
        android:padding="10dp"
        android:textColorHint="@color/hint_text"
        android:textSize="18sp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:paddingVertical="10dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="8dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:backgroundTint="@color/white"
        android:paddingVertical="10dp"
        android:text="@string/btn_signup"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:cornerRadius="8dp" />


</RelativeLayout>