<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold
" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:background="@color/background_light"
        android:padding="10dp"
        android:layout_height="wrap_content"

        android:hint="@string/hint_password"
        android:textColorHint="@color/hint_text"

        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/txtLogin"

        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:background="@color/background_light"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="@color/hint_text"
        android:textSize="18sp"
        android:layout_below="@+id/etEmail"
        android:layout_marginBottom="10dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:paddingVertical="10dp"
        app:cornerRadius="8dp"
        android:textSize="20sp"
        android:layout_below="@id/etPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:layout_marginBottom="10dp"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:paddingVertical="10dp"
        app:cornerRadius="8dp"
        android:textSize="20sp"
        android:layout_below="@id/btnLogin"
        android:textColor="@color/primary"
        android:backgroundTint="@color/white"
        />

</RelativeLayout>